# OPENCV_PictureGrab

./: CMakeLists.txt  config.yaml  main.cpp
.cache/clangd/index/: cameras.hpp.93D7C376EFA6B20F.idx  hikcam.hpp.28F957E90639D53B.idx  main.cpp.D129517F2A63DBAB.idx
inc/: cameras.hpp  hikcam.hpp
